--- a/Fixaçao_front/readme.me
+++ b/Fixaçao_front/readme.me
@@ -75,4 +75,4 @@ O formulário é dividido em sete seções:
 1. Clone este repositório para o seu computador:
 
    ```bash
-   git clone https://github.com/seu-usuario/cadastro-usuario.git
+   git clone https://github.com/Ro4ever/Fixaçao_front.git
